# mwtab

./: .gitignore  .travis.yml  CHANGELOG.rst  CITATION.cff  LICENSE  MANIFEST.in  PUBLICATIONS.rst  README.rst  api.html  genindex.html  guide.html  index.html  license.html  main.py  metadata_column_matching.html  objects.inv  old_setup.py  py-modindex.html  pyproject.toml  reqirements.txt  requirements.txt  search.html  searchindex.js  setup.py  todo.html  tutorial.html
.github/workflows/: build.yml  build_documentation.yml  codecov.yml  documentation.yml  package_release.yml  pull_request.yml  pypi.yml  tests.yml
_modules/: index.html
_modules/mwtab/: cli.html  converter.html  metadata_column_matching.html  mwextract.html  mwrest.html  mwtab.html  tokenizer.html  validator.html
_sources/: api.rst.txt  todo.rst.txt
_static/: documentation_options.js
_static/mwfiles/mwfiles_dir_json/: ST000017_AN000035.json
docs/: Makefile  api.rst  conf.py  guide.rst  index.rst  metadata_column_matching.rst  requirements-rtd.txt  requirements.txt  todo.rst  tutorial.ipynb  tutorial.rst
docs/_static/css/: custom.css
docs/_static/mwfiles/: ST000001_AN000001.json  ST000001_AN000001.txt  ST000002_AN000002.txt  ST000040_AN000060.txt
mwtab/: __init__.py  __main__.py  cli.py  converter.py  fileio.py  fileutils.py  mwextract.py  mwrest.py  mwschema.py  mwtab.py  tokenizer.py  validator.py
src/mwtab/: __init__.py  __main__.py  _version.py  augment.py  cli.py  converter.py  duplicates_dict.py  fileio.py  metabolite_column_regexes.py  metabolites_regexes.py  metadata_column_matching.py  mwextract.py  mwrest.py  mwschema.py  mwtab.py  repair.py  repair_metabolites_matching.py  repair_shifted_rows.py  tokenizer.py  utility_functions.py  validator.py
src/mwtab.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: fixtures.py  test.py  test_cli.py  test_converter.py  test_duplicates_dict.py  test_fileio.py  test_metadata_column_matching.py  test_mwextract.py  test_mwrest.py  test_mwschema.py  test_mwtabfile.py  test_reading.py  test_tokenizer.py  test_useless_files.py  test_validator.py
tests/example_data/: mwtab_files.tar  mwtab_files.tar.bz2
tests/example_data/converter_files/: ST000001_AN000001.json  ST000001_AN000001.txt  ST000022_AN000041.json  ST000022_AN000041.txt  ST001468_AN002444.json  ST001468_AN002444.txt
tests/example_data/mwtab_files/: ST000001_AN000001.txt  ST000002_AN000002.txt  ST000122_AN000204.json
tests/example_data/other_mwtab_files/: ST000022_AN000041.txt  ST000022_AN000041_malformed_SSF_line.txt  ST000022_AN000041_malformed_additional_data.txt  ST000022_AN000041_malformed_factor.txt  ST000022_AN000041_missing_tab.txt  ST000022_AN000041_results_file.txt  ST000022_AN000041_results_file_bad_location.txt  ST000122_AN000204_bad_table_type.json  ST000122_AN000204_binned.json  ST000122_AN000204_duplicate_keys.json  ST000122_AN000204_duplicate_keys.txt  ST000122_AN000204_duplicate_keys_highest_level.json  ST000122_AN000204_duplicate_subsections.txt  ST000122_AN000204_extra_sample.txt  ST000122_AN000204_results_file.txt  ST000122_AN000204_results_file_bad_location.txt  bad_file.txt
(+58 files in other folders)
